syntax = "proto3";
package logi.bot_config;

service BotConfigService {
  // List all bot configs for current organization
  rpc ListConfigs(ListBotConfigsRequest) returns (ListBotConfigsResponse);
  // Get a single bot config
  rpc GetConfig(GetBotConfigRequest) returns (BotConfigResponse);
  // Create or update a bot config
  rpc UpsertConfig(UpsertBotConfigRequest) returns (BotConfigResponse);
  // Delete a bot config
  rpc DeleteConfig(DeleteBotConfigRequest) returns (DeleteBotConfigResponse);
  // Get bot config with decrypted secrets (internal use only, for API calls)
  rpc GetConfigWithSecrets(GetBotConfigRequest) returns (BotConfigWithSecretsResponse);
}

message ListBotConfigsRequest {}

message ListBotConfigsResponse {
  repeated BotConfigResponse configs = 1;
}

message GetBotConfigRequest {
  string id = 1;
}

message DeleteBotConfigRequest {
  string id = 1;
}

message DeleteBotConfigResponse {}

message BotConfigResponse {
  string id = 1;
  string provider = 2;
  string name = 3;
  string client_id = 4;
  bool has_client_secret = 5;
  string service_account = 6;
  bool has_private_key = 7;
  string bot_id = 8;
  bool enabled = 9;
  string created_at = 10;
  string updated_at = 11;
}

message BotConfigWithSecretsResponse {
  string id = 1;
  string provider = 2;
  string name = 3;
  string client_id = 4;
  string client_secret = 5;
  string service_account = 6;
  string private_key = 7;
  string bot_id = 8;
}

message UpsertBotConfigRequest {
  string id = 1;               // empty for create, set for update
  string provider = 2;
  string name = 3;
  string client_id = 4;
  string client_secret = 5;    // plaintext, will be encrypted server-side
  string service_account = 6;
  string private_key = 7;      // plaintext PEM, will be encrypted server-side
  string bot_id = 8;
  bool enabled = 9;
}
